--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -3,6 +3,9 @@ header img {
     width: 150px;
     margin-bottom: 10px;
 }
+.img {
+    width: 100px;
+}
 
 header {
     padding-top: 10px;
@@ -15,6 +18,10 @@ header nav{
 header p {
     font-size: 1.7em;
     margin-bottom: 10px;
+    color: #07014c;
+}
+
+.sidNavColor{
     color: #07014c;
 }
 
