--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -12,9 +12,6 @@ header {
     background-color: #acb9b8;
 }
 
-.zIndex {
-    
-}
 
 header nav{
     box-shadow: none;
@@ -22,9 +19,10 @@ header nav{
 }
 
 header p {
-    font-size: 1.7em;
+    font-size: 1.9em;
     margin-bottom: 10px;
     color: #3f3f40;
+    font-family: 'Abril Fatface', cursive;
 }
 
 .sidNavColor{
@@ -33,6 +31,8 @@ header p {
 
 header h4 {
     color: #3f3f40;
+    font-family: 'Abril Fatface', cursive;
+    font-size: 2.4em;
 }
 
 #centeredmenu {
@@ -64,11 +64,13 @@ header h4 {
  #centeredmenu ul li a {
     display:block;
     margin-right: 20px;
-    padding:10px 10px;
+    padding:15px 10px;
     color:#3f3f40;
     text-decoration:none;
     line-height:1.1em;
-    font-size: 2.7em;
+    font-size: 1.9em;
+    font-family: 'Abril Fatface', cursive;
+
  }
 
  /* About me Section */
@@ -88,14 +90,6 @@ header h4 {
     height: 300px;
   }
     
- /* body {
-    background-image: url(../images/bgImage.jpg);
-    background-repeat: no-repeat;
-    height: 100%;
-    background-position: center 85px;
-    background-size: cover;
-} */
-
 div p {
     color: #3f3f40;
     opacity: .7;
