--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -36,6 +36,7 @@ header h4 {
 }
 
 #centeredmenu {
+    height: 100%;
     float:left;
     width:100%;
     overflow:hidden;
@@ -43,6 +44,7 @@ header h4 {
 
  }
  #centeredmenu ul {
+    height: 100%;
     clear:left;
     float:left;
     list-style:none;
@@ -53,6 +55,7 @@ header h4 {
     text-align:center;
  }
  #centeredmenu ul li {
+    height: 100%;
     display:block;
     float:left;
     list-style:none;
@@ -62,6 +65,7 @@ header h4 {
     right:50%;
  }
  #centeredmenu ul li a {
+    height: 100%;
     display:block;
     margin-right: 20px;
     padding:15px 10px;
@@ -72,6 +76,7 @@ header h4 {
     font-family: 'Abril Fatface', cursive;
 
  }
+ 
 
  /* About me Section */
 
@@ -87,7 +92,7 @@ header h4 {
      max-width: 100%;
  }
  .parallax-container {
-    height: 300px;
+    height: 200px;
   }
     
 div p {
